fixed distorted image size on uploaded books

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -281,7 +281,6 @@ h6 {
 }
 
 .book-content__image {
-  width: 100%;
   height: 350px;
   object-fit: cover;
 }
